PROJECT(6bed4 C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(VERSION "0.0.1")

ADD_DEFINITIONS(-DLINUX)

# maybe they should be renamed to 6bed4client and 6bed4server
# or something like that...
ADD_EXECUTABLE(6bed4client "client.c")
ADD_EXECUTABLE(6bed4server "router.c")

INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/6bed4client DESTINATION sbin)
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/6bed4server DESTINATION sbin)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/6bed4server.man DESTINATION ${SHARE_INSTALL_PREFIX}/man/man8)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/6bed4client.man DESTINATION ${SHARE_INSTALL_PREFIX}/man/man8)

INCLUDE(CPack)
